import("//build/config/linux/pkg_config.gni")

pkg_config("system_jsoncpp") {
  packages = [ "jsoncpp" ]
}

config("jsoncpp_config") {
  if(is_win && !is_mingw && !is_component_build) {
    ldflags = ["/ignore:4099"] # needed on VCPKG CI builds
  }
  configs = [ 
    ":system_jsoncpp",
  ]
}

source_set("jsoncpp") {
  public_configs = [ 
    ":system_jsoncpp",
  ]
}
