import("//build/config/linux/pkg_config.gni")

pkg_config("system_rapidjson") {
  packages = [ "rapidjson" ]
}

config("rapidjson_config") {
  if(is_win && !is_mingw && !is_component_build) {
    ldflags = ["/ignore:4099"] # needed on VCPKG CI builds
  }
  configs = [ 
    ":system_rapidjson",
  ]
}

source_set("rapidjson") {
  public_configs = [ 
    ":system_rapidjson",
  ]
}
