import("//build/config/linux/pkg_config.gni")

pkg_config("system_zlib") {
  packages = [ "zlib" ]
}

config("zlib_config") {
  if(is_win && !is_component_build && !is_mingw) {
    ldflags = ["/ignore:4099"] # needed on CI builds
  }
  defines = [ "USE_SYSTEM_ZLIB=1" ]
  configs = [ ":system_zlib" ]
}

source_set("zlib") {
  public_configs = [ 
    ":zlib_config",
    ":system_zlib" ]
}
